# senado-federal

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements-dev.txt  senado_client.py
.github/workflows/: publish-clawhub.yml
scripts/: senado.py
tests/: conftest.py
tests/integration/: test_senado_integration.py
tests/unit/: test_senado_client.py
